build/k8s resource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: apache-kafka
            port:
              number: 9092
      - path: /spark
        pathType: Prefix
        backend:
          service:
            name: apache-spark-master-svc
            port:
              number: 7077
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
